--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.31.0",
+    "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
