--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.31.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
