--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.31.0",
     "react-hook-form": "^7.45.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.1",
+    "uuid": "^9.0.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
