--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.5",
     "socket.io-client": "^4.7.1",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^3.2.0"
